Added 4th and 5th model submissions.

--- a/ml_with_a_heart/notebooks/analysis.ipynb
+++ b/ml_with_a_heart/notebooks/analysis.ipynb
@@ -9,17 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alexb/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "%matplotlib inline\n",
-    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier\n",
     "from sklearn.feature_selection import chi2\n",
@@ -140,20 +149,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/alex/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/preprocessing/data.py:617: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
-      "  return self.partial_fit(X, y)\n",
-      "/Users/alex/miniconda3/envs/ds/lib/python3.6/site-packages/sklearn/base.py:462: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
-      "  return self.fit(X, **fit_params).transform(X)\n",
-      "/Users/alex/miniconda3/envs/ds/lib/python3.6/site-packages/ipykernel_launcher.py:4: DataConversionWarning: Data with input dtype uint8, float16, uint16 were all converted to float64 by StandardScaler.\n",
-      "  after removing the cwd from sys.path.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard Scaler\n",
     "std_scaler = StandardScaler()\n",
@@ -406,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +421,7 @@
        "LabelEncoder()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1958,7 @@
    "metadata": {},
    "source": [
     "# Results\n",
-    "This third model using logistic regression, yielded a log-loss of 0.3061. This places me at the time of submission at 6."
+    "This third model using logistic regression, yielded a log-loss of 0.3061. This places me at the time of submission at 6. The first place loss was 0.27887 at the time of submission."
    ]
   },
   {
@@ -2264,6 +2260,536 @@
    "source": [
     "# Null hypothesis is that variables are independent\n",
     "df_chisq[df_chisq['pval'] < 0.05]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA\n",
+    "Run principal components analysis to see which features provide the most variance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PCA(copy=True, iterated_power='auto', n_components=None, random_state=None,\n",
+       "  svd_solver='auto', tol=0.0, whiten=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca = PCA()\n",
+    "pca.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.26093061, 0.15984965, 0.12835757, 0.09933571, 0.07265568,\n",
+       "       0.05571885, 0.04029445, 0.03359516, 0.02771188, 0.0237923 ,\n",
+       "       0.02001632, 0.01904319, 0.0158398 , 0.01440893, 0.01202974,\n",
+       "       0.00717394, 0.00384889, 0.00250089, 0.00228777, 0.00060865])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The principal component that explains the highest variance in the data only explains 26% of the variance while the lowest expalins 0.06%. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.850737687095088"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evr = pca.explained_variance_ratio_\n",
+    "evr[:8].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic with reduced feature-set\n",
+    "Let's use PCA to select N components and re-train our logistic regression model and see how well it fares against the validation sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The first 8 principal components explain 85% of the variance. Let's start with this\n",
+    "pca = PCA(n_components=0.85)\n",
+    "principal_components = pca.fit_transform(X)\n",
+    "X_test = df_x_test.drop('patient_id', axis=1).values\n",
+    "principal_components_test = pca.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=25, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l1', random_state=10, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg = LogisticRegression(random_state=rs, solver='liblinear', C=25, penalty='l1')\n",
+    "log_reg.fit(principal_components, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8166666666666667"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg.score(principal_components, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = log_reg.predict_proba(principal_components_test)\n",
+    "df_submit = pd.DataFrame(data=df_x_test['patient_id'], columns=['patient_id'])\n",
+    "df_submit['heart_disease_present'] = y_pred[:,1]\n",
+    "df_submit.to_csv('../models/sub_04.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This produced a score of 0.34802 which is currently beyond 50th place.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try again with 90% variance explained\n",
+    "pca = PCA(n_components=0.90)\n",
+    "principal_components = pca.fit_transform(X)\n",
+    "X_test = df_x_test.drop('patient_id', axis=1).values\n",
+    "principal_components_test = pca.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=25, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l1', random_state=10, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg = LogisticRegression(random_state=rs, solver='liblinear', C=25, penalty='l1')\n",
+    "log_reg.fit(principal_components, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8277777777777777"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg.score(principal_components, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7777777777777778\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7222222222222222\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8888888888888888\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8888888888888888\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 1.0\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.6666666666666666\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7222222222222222\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7777777777777778\n",
+      "Average score: 0.8111111111111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = df_x.drop('patient_id', axis=1).values\n",
+    "y = df_y.drop('patient_id', axis=1).values.ravel()\n",
+    "kfold = StratifiedKFold(n_splits=10, random_state=rs).split(X, y)\n",
+    "pca = PCA(0.85)\n",
+    "pca.fit(X)\n",
+    "scores = []\n",
+    "for k, (train, test) in enumerate(kfold):\n",
+    "    print('Length of train: {}'.format(len(train)))\n",
+    "    print('Length of test: {}'.format(len(test)))\n",
+    "    pc = pca.transform(X[train])\n",
+    "    pc_test = pca.transform(X[test])\n",
+    "    log_reg.fit(pc, y[train])\n",
+    "    score = log_reg.score(pc_test, y[test])\n",
+    "    scores.append(score)\n",
+    "    print('Score: {}'.format(score))\n",
+    "    \n",
+    "print('Average score: {}'.format(np.array(scores).mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7777777777777778\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7777777777777778\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8888888888888888\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8888888888888888\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.9444444444444444\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.6666666666666666\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7222222222222222\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7777777777777778\n",
+      "Average score: 0.8111111111111111\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With linear SVM having the highest score, let's train on all the data using that model\n",
+    "lin_svm = SVC(kernel='linear', C=28.0, random_state=rs, probability=True)\n",
+    "X = df_x.drop('patient_id', axis=1).values\n",
+    "y = df_y.drop('patient_id', axis=1).values.ravel()\n",
+    "kfold = StratifiedKFold(n_splits=10, random_state=rs).split(X, y)\n",
+    "pca = PCA(0.75)\n",
+    "pca.fit(X)\n",
+    "scores = []\n",
+    "for k, (train, test) in enumerate(kfold):\n",
+    "    print('Length of train: {}'.format(len(train)))\n",
+    "    print('Length of test: {}'.format(len(test)))\n",
+    "    pc = pca.transform(X[train])\n",
+    "    pc_test = pca.transform(X[test])\n",
+    "    lin_svm.fit(pc, y[train])\n",
+    "    score = lin_svm.score(pc_test, y[test])\n",
+    "    scores.append(score)\n",
+    "    print('Score: {}'.format(score))\n",
+    "    \n",
+    "print('Average score: {}'.format(np.array(scores).mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8444444444444444\n",
+      "{'max_depth': 8, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier(random_state=rs)\n",
+    "param_range = [10, 100, 500, 1000]\n",
+    "param_grid = [{'n_estimators': param_range, 'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]}]\n",
+    "gs = GridSearchCV(estimator=rf, param_grid=param_grid, scoring='accuracy', cv=10, n_jobs=2)\n",
+    "gs = gs.fit(X, y)\n",
+    "print(gs.best_score_)\n",
+    "print(gs.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8888888888888888\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7222222222222222\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 1.0\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.9444444444444444\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8333333333333334\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7777777777777778\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.7222222222222222\n",
+      "Length of train: 162\n",
+      "Length of test: 18\n",
+      "Score: 0.8888888888888888\n",
+      "Average score: 0.8444444444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With linear SVM having the highest score, let's train on all the data using that model\n",
+    "rf = RandomForestClassifier(random_state=rs, n_estimators=100, max_depth=8)\n",
+    "X = df_x.drop('patient_id', axis=1).values\n",
+    "y = df_y.drop('patient_id', axis=1).values.ravel()\n",
+    "kfold = StratifiedKFold(n_splits=10, random_state=rs).split(X, y)\n",
+    "pca = PCA(1)\n",
+    "pca.fit(X)\n",
+    "scores = []\n",
+    "for k, (train, test) in enumerate(kfold):\n",
+    "    print('Length of train: {}'.format(len(train)))\n",
+    "    print('Length of test: {}'.format(len(test)))\n",
+    "    #pc = pca.transform(X[train])\n",
+    "    #pc_test = pca.transform(X[test])\n",
+    "    rf.fit(X[train], y[train])\n",
+    "    score = rf.score(X[test], y[test])\n",
+    "    #rf.fit(pc, y[train])\n",
+    "    #score = rf.score(pc_test, y[test])\n",
+    "    scores.append(score)\n",
+    "    print('Score: {}'.format(score))\n",
+    "    \n",
+    "print('Average score: {}'.format(np.array(scores).mean()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestClassifier(random_state=rs, n_estimators=100, max_depth=8)\n",
+    "rf.fit(X,y)\n",
+    "X_test = df_x_test.drop('patient_id', axis=1).values\n",
+    "y_pred = rf.predict_proba(X_test)\n",
+    "df_submit = pd.DataFrame(data=df_x_test['patient_id'], columns=['patient_id'])\n",
+    "df_submit['heart_disease_present'] = y_pred[:,1]\n",
+    "df_submit.to_csv('../models/sub_05.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This produced a result of 0.3595."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.1951117 , -0.0809259 ,  0.23688175,  0.59648986, -0.24793126,\n",
+       "       -0.22134056,  0.83405321,  1.00099841,  0.14492848,  1.60729337,\n",
+       "        2.58383772,  2.38286678,  1.46568849,  0.65200087,  2.28090804,\n",
+       "        1.52378506,  0.67726013,  1.76117728,  0.13042964,  1.54412346])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg = LogisticRegression(random_state=rs, solver='lbfgs', C=25, penalty='l2')\n",
+    "X = df_x.drop('patient_id', axis=1).values\n",
+    "y = df_y.drop('patient_id', axis=1).values.ravel()\n",
+    "log_reg.fit(X,y)\n",
+    "log_reg.coef_.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 25,\n",
+       " 'class_weight': None,\n",
+       " 'dual': False,\n",
+       " 'fit_intercept': True,\n",
+       " 'intercept_scaling': 1,\n",
+       " 'max_iter': 100,\n",
+       " 'multi_class': 'ovr',\n",
+       " 'n_jobs': 1,\n",
+       " 'penalty': 'l2',\n",
+       " 'random_state': 10,\n",
+       " 'solver': 'lbfgs',\n",
+       " 'tol': 0.0001,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_reg.get_params()"
    ]
   },
   {
